# spongecrab

./: Cargo.toml  README.md  example.sh  make_readme.sh  test.sh
src/: builder.rs  example.sh  lib.rs  main.rs  parser.rs  result.rs
tests/: integration.rs
