[package]
name = "spongecrab"
description = "Bringing powerful argument parsing to bash scripts"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/ArielHorwitz/spongecrab"
keywords = [
    "argument",
    "arg",
    "parsing",
    "parser",
    "parse",
    "cli",
    "script",
    "bash",
]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.14", features = ["derive", "string"] }
