[package]
name = "spongecrab"
description = "Bringing powerful argument parsing to bash scripts"
version = "0.2.3"
edition = "2021"
repository = "https://github.com/ArielHorwitz/spongecrab"
license = "Unlicense"
keywords = [
    "argument",
    "parser",
    "cli",
    "bash",
]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.14", features = ["derive", "string"] }
