[package]
name = "spongecrab"
description = "Bringing powerful argument parsing to bash scripts"
version = "0.2.3"
edition = "2024"
repository = "https://github.com/ArielHorwitz/spongecrab"
license = "Unlicense"
keywords = [
    "argument",
    "parser",
    "cli",
    "bash",
]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "string"] }
